--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 jwt:
-  secret: your_jwt_secret_key_here
+  secret: "shaoshuo123"
   expiration: 86400
   token-header: Authorization
-  token-prefix: "Bearer "
+  token-prefix: ""
 
 spring:
   security:
@@ -32,6 +32,9 @@ spring:
       test-while-idle: true
       test-on-borrow: false
       test-on-return: false
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
 
 server:
   port: 8080
@@ -48,3 +51,17 @@ mybatis-plus:
       logic-delete-field: deleted
       logic-delete-value: 1
       logic-not-delete-value: 0
+
+springdoc:
+  api-docs:
+    enabled: true
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+  packages-to-scan: com.scheduling.controller
+  
+# 如果使用了 knife4j-openapi3
+knife4j:
+  enable: true
+  setting:
+    language: zh_cn
